--- a/jQuery-Lesson/index.html
+++ b/jQuery-Lesson/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-</head>
-<body>
-	<script src="jquery.min.js"></script>
-	<script src="app.js"></script>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<link rel="stylesheet" href="app.css">
+	</head>
+	<body>
+		<div class="box1"></div>
+		<script src="jquery.min.js"></script>
+		<script src="app.js"></script>
+	</body>
 </html>
